Updates .env and .env.local files, adds SMTP email and password, and updates ContactUs component.
Fixes #123

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -5,3 +5,5 @@ NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dqljyxaii
 CLOUDINARY_API_KEY=315768712972553
 CLOUDINARY_API_SECRET=XINhf6wQ1cZNNALUpcgQXNCdNZk
 CLOUDINARY_URL=cloudinary://315768712972553:XINhf6wQ1cZNNALUpcgQXNCdNZk@dqljyxaii
+SMTP_EMAIL=mohammed.iibrahim.omar@gmail.com
+SMTP_PASSWORD=neckexkhrozbjfwf
