--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
+    "simplex-noise": "^4.0.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
